[feat] 작가 개별 조회 #40
- 작가 id, 정보 요청 멤버 id 필요
- 작가를 조회할 때 member 정보와 photomood 정보 fetch join으로 한번에 가져옴
- 팔로워 수를 가져오기 위해서 count 를 사용했는데, `Long` 타입이 기본 반환이라 `Math.toIntExact()` 로 int로 변경
- 작가 domain에 `introduction` 추가